# fl-disagreement-resolution

./: .gitignore  LICENSE  README.md  config_loader.py  data_utils.py  example_compare_scenarios.py  fl_client.py  fl_orchestrator.py  fl_server.py  models.py  pyproject.toml  run_federated_experiment.sh  setup_mnist_data.py  test_disagreement_scenarios.py  train_n-cmapss_rul.py
data_module/: __init__.py
data_module/mnist/: __init__.py  dataset.py  utils.py
data_module/n_cmapss/: __init__.py  dataset.py  utils.py
fl_client/: client.py  main.py  training.py  utils.py
fl_module/: __init__.py  base.py  models.py
fl_module/mnist/: dataset.py  utils.py
fl_module/n_cmapss/: dataset.py  utils.py
fl_server/: __init__.py  aggregation.py  disagreement.py  evaluation.py  main.py  server.py  utils.py
mock_etcd/: configuration.json  disagreements.json  etcd_loader.py
mock_etcd/scenarios/: scenario1.json  scenario10.json  scenario11.json  scenario12.json  scenario13.json  scenario14.json  scenario15.json  scenario16.json  scenario17.json  scenario18.json  scenario19.json  scenario2.json  scenario20.json  scenario21.json  scenario22.json  scenario23.json  scenario24.json  scenario25.json  scenario26.json  scenario27.json  scenario28.json  scenario29.json  scenario3.json  scenario30.json  scenario31.json  scenario32.json  scenario33.json  scenario34.json  scenario4.json  scenario5.json  scenario6.json  (+3 more)
scripts/: compare_fl_runs.py  gather_simulation_outputs.py  gather_track_contributions.py  run_fl.py  test_disagreement_scenarios.py  visualize_track_contributions.py
(+9 files in other folders)
